--- a/style.css
+++ b/style.css
@@ -1,8 +1,66 @@
-:root {
-    --primary: #5a5a5a;
-}
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+body {
+    background: #363333;
+    font-family: sans-serif;
+}
+h1 {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: center;
+    font-size: 40px;
+    color: #fff;
+}
+.main-content {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
+}
+.main-vid {
+    margin-left: 20px;
+    background: purple;
+    padding: 10px;
+    border-radius: 10px;
+}
+.main-vid video {
+    width: 100%;
+}
+.main-vid .title {
+    color: #fff;
+    text-transform: capitalize;
+    margin-top: 10px;
+    font-size: 30px;
+}
+.vid-playlist {
+    margin-right: 20px;
+    background: peru;
+    border-radius: 10px;
+    overflow: auto;
+    height: 530px;
+}
+.vid-playlist .vid {
+    display: flex;
+    align-items: center;
+    background-color: red;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+}
+.vid-playlist .vid.active {
+    background-color: blue;
+}
+.vid-playlist .vid.active .title {
+    color: #363333;
+}
+.vid-playlist .vid video {
+    width: 180px;
+    margin-right: 10px;
+}
+.vid-playlist .vid .title {
+    text-transform: capitalize;
+    font-size: 18px;
+    color: #fff;
 }
